- Fixed bug #41252 (Calling mcrypt_generic without first calling   mcrypt_generic_init crashes).